--- a/src/App.scss
+++ b/src/App.scss
@@ -6,7 +6,7 @@
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
-  font-family: "Georama", sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 html {
