starting project: maintenance page

--- a/src/pages/Maintenance/styles.module.scss
+++ b/src/pages/Maintenance/styles.module.scss
@@ -7,29 +7,26 @@
 
   .__container {
     overflow: hidden;
-    width: 100%;
-    height: 100%;
-    max-height: 100%;
     display: block;
     border: 4px solid #000;
-    height: 59rem;
-    top: 0;
-    bottom: 0;
-    right: 0;
+    height: 49rem;
+    width: 100%;
     background: rgba(255, 255, 255, 0.75);
     flex-direction: column;
+    position: relative;
 
     .__image {
       position: relative;
       display: block;
       width: 100%;
-      height: auto;
+      height: 100%;
       z-index: -1;
+
       img {
         object-fit: cover;
         width: 100%;
         height: 100%;
-        object-position: 100% 74%;
+        object-position: 100% 76%;
       }
     }
     .__txt {
