--- a/src/pages/Maintenance/styles.module.scss
+++ b/src/pages/Maintenance/styles.module.scss
@@ -36,15 +36,52 @@
       transform: translate(-50%, -50%);
       background-color: transparent;
       color: #fff;
-      padding: 10px 20px;
-      font-size: 20px;
       text-align: center;
+      width: 100%;
+      height: auto;
       p {
-        margin-top: 10px;
         margin-top: 10px;
         font-size: 30px;
         z-index: 2;
         color: #000;
+      }
+    }
+  }
+}
+
+//////////////////////// RESPONSIVE ///////////////////////////////
+@media only screen and (max-width: 820px) {
+  .maintenance {
+    padding: 3rem;
+    .__container {
+      .__image {
+        img {
+          object-position: 38% 76%;
+        }
+      }
+      .__txt {
+        p {
+          font-size: 21px;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .maintenance {
+    padding: 2rem;
+    .__container {
+      height: 36rem;
+      .__image {
+        img {
+          object-position: 39% 76%;
+        }
+      }
+      .__txt {
+        p {
+          font-size: 19px;
+        }
       }
     }
   }
