--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -1,11 +1,38 @@
 .home {
   display: flex;
-  margin: auto;
-  width: 640px;
-  padding: 50px;
-  p {
-    font-size: 5rem;
-    text-align: center;
-    justify-content: center;
+  width: 100%;
+  height: auto;
+  flex-direction: column;
+
+  .__container {
+    display: block;
+    border: 4px solid #000;
+    height: 100%;
+    width: 100%;
+    background: rgba(60, 57, 57, 0.75);
+    flex-direction: column;
+    position: absolute;
+
+    .__image {
+      position: relative;
+      display: block;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+
+      img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+        object-position: 88% 104%;
+      }
+    }
+  }
+  .__section {
+    width: 100%;
+    display: flex;
+    overflow: hidden;
+    min-height: 85vh;
+    border: 2px solid fuchsia;
   }
 }
