--- a/src/App.scss
+++ b/src/App.scss
@@ -6,7 +6,8 @@
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
-  font-family: "Open Sans", sans-serif;
+  font-family: "EB Garamond", serif;
+  font-style: italic;
 }
 
 html {
