--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -3,26 +3,25 @@
   bottom: 0;
   width: 100%;
   height: 100%;
-  border-top: 4px solid red;
-  background: turquoise;
+  //   border-top: 4px solid red;
   z-index: 3;
+
+  //   background: rgba(11, 11, 11, 0.75);
 
   .__container {
     display: flex;
     align-items: center;
     bottom: 0;
-    width: auto;
     color: #fff;
-    background: pink;
     height: auto;
     width: 70%;
     flex-wrap: wrap;
-    justify-content: center;
-    padding: 1rem;
+    border: 2px solid yellow;
+    position: absolute;
 
     .__logo {
       width: auto;
-      max-height: 2rem;
+      max-height: 3rem;
     }
 
     .__copyright {
@@ -40,13 +39,14 @@
       list-style-type: none;
       height: auto;
       width: auto;
+      border: 2px solid turquoise;
 
       li {
         padding: 8px;
         font-size: small;
 
         a {
-          color: #fff;
+          color: red;
           font-size: 12px;
           &:hover {
             color: blue;
