--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -2,11 +2,12 @@
   display: flex;
   width: 100%;
   height: auto;
+
   .__container {
     display: flex;
     width: 100%;
     height: auto;
-    background-color: skyblue;
+    background-color: transparent;
     border: 3px solid red;
     z-index: 3;
 
@@ -16,6 +17,7 @@
       width: 70%;
       height: auto;
       align-items: center;
+
       li {
         font-size: 35px;
         text-decoration: none;
@@ -25,6 +27,7 @@
         padding: 33px;
       }
     }
+
     .__insta_link {
       display: flex;
       width: auto;
@@ -35,6 +38,7 @@
         font-size: 35px;
         text-align: center;
         justify-content: center;
+        font-family: "Georama", sans-serif;
       }
     }
   }
