--- a/src/index.scss
+++ b/src/index.scss
@@ -9,7 +9,7 @@ body {
   min-height: 100vh;
   line-height: 1;
   background: #fff;
-  font-family: "Georama", sans-serif;
+  font-family: "Open Sans", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-weight: 400;
