--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -1,7 +1,7 @@
 .home {
   display: flex;
   width: 100%;
-  height: auto;
+  height: 100%;
   flex-direction: column;
 
   .__container {
@@ -24,7 +24,7 @@
         object-fit: cover;
         width: 100%;
         height: 100%;
-        object-position: 88% 104%;
+        object-position: 100% 72%;
       }
     }
   }
@@ -32,7 +32,7 @@
     width: 100%;
     display: flex;
     overflow: hidden;
-    min-height: 85vh;
+    min-height: 81vh;
     border: 2px solid fuchsia;
   }
 }
