wip: rework & refacto

--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -39,6 +39,7 @@
         text-align: center;
         justify-content: center;
         font-family: "Georama", sans-serif;
+        font-style: normal;
       }
     }
   }
