--- a/src/style/fonts.scss
+++ b/src/style/fonts.scss
@@ -1,3 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,600;1,500&family=Georama&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,600;1,500&family=Poppins&display=swap");
 // font-family: 'EB Garamond', serif;
-// font-family: 'Georama', sans-serif;
+// font-family: 'Poppins', sans-serif;
