--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -33,6 +33,49 @@
     display: flex;
     overflow: hidden;
     min-height: 81vh;
-    border: 2px solid fuchsia;
+    border: 4px solid fuchsia;
+    position: relative;
+
+    .__box {
+      display: flex;
+      width: 100%;
+      height: auto;
+      border: 2px solid red;
+      position: relative;
+      padding: 3rem;
+
+      .__box_content {
+        width: 30%;
+        height: auto;
+        border: 2px solid blue;
+        right: 0;
+        position: absolute;
+        z-index: 2;
+
+        p {
+          color: #fff;
+          font-size: 22px;
+          padding: 4rem;
+        }
+
+        .__gif {
+          display: block;
+          padding: 2rem;
+          padding: 2rem;
+          img {
+            width: 100%;
+            height: auto;
+            border-radius: 87px;
+          }
+        }
+        .__form_contact {
+          display: block;
+          width: 100%;
+          height: 15rem;
+          border: 3px solid red;
+          color: #fff;
+        }
+      }
+    }
   }
 }
