--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -3,10 +3,7 @@
   bottom: 0;
   width: 100%;
   height: 100%;
-  //   border-top: 4px solid red;
   z-index: 3;
-
-  //   background: rgba(11, 11, 11, 0.75);
 
   .__container {
     display: flex;
@@ -16,7 +13,6 @@
     height: auto;
     width: 70%;
     flex-wrap: wrap;
-    border: 2px solid yellow;
     position: absolute;
 
     .__logo {
@@ -39,20 +35,24 @@
       list-style-type: none;
       height: auto;
       width: auto;
-      border: 2px solid turquoise;
 
       li {
         padding: 8px;
         font-size: small;
 
         a {
-          color: red;
+          color: #fff;
           font-size: 12px;
           &:hover {
-            color: blue;
+            color: gray;
           }
         }
       }
+    }
+    .__keepintch {
+      display: flex;
+      width: 57%;
+      height: auto;
     }
   }
   span {
