--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -33,24 +33,21 @@
     display: flex;
     overflow: hidden;
     min-height: 81vh;
-    border: 4px solid fuchsia;
     position: relative;
 
     .__box {
       display: flex;
       width: 100%;
       height: auto;
-      border: 2px solid red;
       position: relative;
-      padding: 3rem;
 
       .__box_content {
-        width: 30%;
         height: auto;
-        border: 2px solid blue;
         right: 0;
         position: absolute;
         z-index: 2;
+        margin-left: 84rem;
+        width: auto;
 
         p {
           color: #fff;
@@ -59,20 +56,20 @@
         }
 
         .__gif {
-          display: block;
           padding: 2rem;
-          padding: 2rem;
+          justify-content: center;
+          display: flex;
+
           img {
-            width: 100%;
+            width: 86%;
             height: auto;
-            border-radius: 87px;
+            border-radius: 64px;
           }
         }
         .__form_contact {
           display: block;
           width: 100%;
-          height: 15rem;
-          border: 3px solid red;
+          height: 20rem;
           color: #fff;
         }
       }
