--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -10,6 +10,7 @@
     height: auto;
     background-color: transparent;
     z-index: 3;
+    padding: 2rem;
 
     .__list_header {
       display: flex;
