--- a/src/components/KeepInTouch/styles.module.scss
+++ b/src/components/KeepInTouch/styles.module.scss
@@ -7,16 +7,16 @@
 
   .__container_form {
     width: 100%;
-    overflow: hidden;
     height: 100%;
     position: relative;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
 
     .form-element {
       margin-top: 0.5rem;
     }
+
     input {
       border: none;
       border-bottom: 0.1rem solid #e6e6e6;
