--- a/src/components/Formulaire/styles.module.scss
+++ b/src/components/Formulaire/styles.module.scss
@@ -1,81 +1,47 @@
 .__container_form {
-  background: white;
-  border-radius: 19px;
-  overflow: hidden;
   width: 100%;
   height: 100%;
   position: relative;
   display: flex;
+  justify-content: flex-end;
+  align-items: center;
   flex-direction: column;
-  padding: 16px;
+  background: silver;
+  border-radius: 19px;
 
   .__form_element {
     margin-top: 0.5rem;
-    display: flex;
-    flex-direction: column;
 
     label {
-      color: grey;
-      font-size: 1.5rem;
-      text-align: left;
-      margin-bottom: 1rem;
+      display: block;
+      color: #fff;
+      font-size: 2rem;
     }
 
     input,
     textarea {
-      font-size: 16px;
-      border-radius: 320px;
-      padding: 19px;
-      letter-spacing: -0.2px;
-      box-shadow: inset 2px 2px 5px blue, inset -5px -5px 10px #fff;
-      width: 100%;
-      appearance: none;
-      -webkit-appearance: none;
-      resize: none;
-      outline: none;
       border: none;
-      height: 4rem;
-      background-color: white;
-      cursor: pointer;
-      overflow: auto;
-
-      &:focus {
-        box-shadow: inset 1px 1px 2px blue, inset -1px -1px 2px #fff;
+      border-bottom: 0.1rem solid #e6e6e6;
+      width: 90%;
+      margin-bottom: 1rem;
+      font-size: 2rem;
+      padding: 0.7rem 0;
+      outline: none;
+      background: transparent;
+      &::placeholder {
+        color: #fff;
+        font-size: 2rem;
       }
     }
   }
 
-  label {
-    display: block;
-  }
-
   button {
-    color: black;
-    box-shadow: -5px -5px 20px #fff, 5px 5px 20px blue;
-    transition: all 0.2s ease-in-out;
-    cursor: pointer;
-    font-weight: 600;
-    width: 14rem;
-    height: auto;
-    border: 0;
-    outline: 0;
-    font-size: 16px;
-    // border-radius: calc(#{$ruler} * 20);
-    padding: 16px;
-    background-color: white;
-    text-shadow: 1px 1px 0 #fff;
-    letter-spacing: -0.2px;
-    margin: 18px auto;
-
-    &:hover {
-      box-shadow: -2px -2px 5px #fff, 2px 2px 5px blue;
-    }
-
-    &:active {
-      box-shadow: inset 1px 1px 2px blue, inset -1px -1px 2px #fff;
-    }
-  }
-  div {
-    color: black;
+    height: 3.2rem;
+    width: 8rem;
+    font-size: 2rem;
+    border-radius: 2rem;
+    background: transparent;
+    color: #fff;
+    margin-top: 1.2rem;
   }
 }
