--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -7,13 +7,12 @@
   footer {
     display: flex;
     align-items: center;
-    color: #fff;
     height: auto;
     width: 100%;
     flex-wrap: wrap;
-    position: absolute;
     bottom: 0;
-    border: 3px solid yellow;
+    position: absolute;
+    justify-content: space-between;
 
     ul {
       display: flex;
@@ -21,32 +20,30 @@
       text-decoration: none;
       list-style-type: none;
       height: auto;
-      width: 50%;
-      border: 4px solid fuchsia;
+      width: auto;
 
       li {
         padding: 8px;
         font-size: small;
-        border: 3px solid turquoise;
 
         .__logo {
           width: auto;
-          max-height: 3rem;
+          max-height: 2rem;
         }
         a {
           color: #fff;
           font-size: 12px;
           &:hover {
-            color: gray;
+            color: #000;
           }
         }
       }
     }
     .__keepintch {
       display: flex;
-      width: 50%;
+      width: auto;
       height: auto;
-      padding: 2rem;
+      padding: 1rem;
     }
   }
 }
