--- a/src/components/KeepInTouch/styles.module.scss
+++ b/src/components/KeepInTouch/styles.module.scss
@@ -47,7 +47,7 @@
       outline: none;
 
       &::placeholder {
-        color: red;
+        color: #000;
         font-size: 2rem;
         text-align: left;
       }
@@ -56,10 +56,15 @@
       height: 3.2rem;
       width: 8rem;
       font-size: 2rem;
-      border-radius: 2rem;
+      border-radius: 1rem;
       background: transparent;
       color: #fff;
       margin-top: 1.2rem;
+      cursor: pointer;
+      border: 2px solid #e6e6e6;
+      &:hover {
+        color: #000;
+      }
     }
   }
 }
