--- a/src/components/KeepInTouch/styles.module.scss
+++ b/src/components/KeepInTouch/styles.module.scss
@@ -12,6 +12,7 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    color: #fff;
 
     .form-element {
       margin-top: 0.5rem;
