--- a/src/components/Formulaire/styles.module.scss
+++ b/src/components/Formulaire/styles.module.scss
@@ -24,6 +24,7 @@
       padding: 0.7rem 0;
       outline: none;
       background: transparent;
+      color: #fff;
       &::placeholder {
         color: #fff;
         font-size: 2rem;
@@ -32,14 +33,16 @@
   }
 
   button {
-    height: 4.2rem;
-    width: 14rem;
-    font-size: 2rem;
-    border-radius: 2rem;
+    height: 3.2rem;
+    width: 8rem;
+    font-size: 1.5rem;
+    border-radius: 1rem;
     background: transparent;
     color: #fff;
-    margin: 1.2rem auto;
+    margin-top: 1.2rem;
     cursor: pointer;
+    border: 2px solid #e6e6e6;
+    margin: auto;
     &:hover {
       color: silver;
     }
