--- a/src/components/Modal/styles.module.scss
+++ b/src/components/Modal/styles.module.scss
@@ -6,6 +6,7 @@
   top: 0;
   bottom: 0;
   left: 0;
+  z-index: 5;
 
   .__modalContainer {
     display: flex;
@@ -18,27 +19,41 @@
     height: 100%;
     border: 4px solid red;
 
-    .__modalRight {
+    .__modal_content {
       width: 100%;
-    }
+      border: 8px solid pink;
 
-    .__closeBtn {
-      position: fixed;
-      top: 8px;
-      right: 8px;
-      border: 4px solid red;
-      width: auto;
-      height: auto;
-      color: white;
-      font-size: 55px;
-      cursor: pointer;
-      font-size: 55px;
-    }
+      .__closeBtn {
+        position: fixed;
+        top: 8px;
+        right: 8px;
+        border: 4px solid red;
+        width: auto;
+        height: auto;
+        color: blue;
+        cursor: pointer;
+        font-size: 36px;
+        font-style: normal;
+      }
 
-    .__content {
-      display: flex;
-      padding: 3rem;
-      border: 3px solid fuchsia;
+      .__content {
+        display: flex;
+        padding: 3rem;
+        border: 3px solid fuchsia;
+        width: 100%;
+        height: 100%;
+
+        .__content_form {
+          display: flex;
+          border: 3px solid yellow;
+          width: 100%;
+          height: 100%;
+        }
+        .__content_text {
+          display: flex;
+          border: 3px solid green;
+        }
+      }
     }
   }
 }
