--- a/src/components/Modal/styles.module.scss
+++ b/src/components/Modal/styles.module.scss
@@ -20,20 +20,26 @@
     border: 4px solid red;
 
     .__modal_content {
-      width: 100%;
+      width: 80%;
+      height: auto;
       border: 8px solid pink;
 
       .__closeBtn {
         position: fixed;
         top: 8px;
         right: 8px;
-        border: 4px solid red;
         width: auto;
         height: auto;
-        color: blue;
         cursor: pointer;
-        font-size: 36px;
-        font-style: normal;
+        p {
+          font-size: 36px;
+          font-style: normal;
+          color: #fff;
+          text-transform: capitalize;
+          &:hover {
+            color: silver;
+          }
+        }
       }
 
       .__content {
