--- a/src/components/AnimCircle/styles.module.scss
+++ b/src/components/AnimCircle/styles.module.scss
@@ -1,4 +1,5 @@
-@import "../../style/scss-variables";
+$backgroundImage: "../../assets/images/boueeHoriz.webp";
+$backgroundFilter: rgba(60, 57, 57, 0.75);
 
 .anim {
   display: flex;
@@ -7,11 +8,20 @@
 
   .__mask {
     position: absolute;
-    z-index: 3;
+    z-index: 2;
+    width: 100%;
+    height: auto;
+    border: 4px solid green;
+    background-image: url($backgroundImage);
+    background-size: cover;
+    background-position-y: 70%;
+
     canvas {
-      background-color: transparent;
+      background-color: $backgroundFilter;
+      background-size: cover;
       width: 100%;
       height: 100%;
+      z-index: -1;
     }
   }
 }
