--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -1,33 +1,18 @@
 .home {
   display: flex;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   flex-direction: column;
 
   .__container {
     display: block;
     border: 4px solid #000;
-    height: 100%;
+    height: auto;
     width: 100%;
-    background: rgba(60, 57, 57, 0.75);
     flex-direction: column;
     position: absolute;
-
-    .__image {
-      position: relative;
-      display: block;
-      width: 100%;
-      height: 100%;
-      z-index: -1;
-
-      img {
-        object-fit: cover;
-        width: 100%;
-        height: 100%;
-        object-position: 100% 72%;
-      }
-    }
   }
+
   .__section {
     width: 100%;
     display: flex;
@@ -73,6 +58,7 @@
             border-radius: 64px;
           }
         }
+
         .__form_contact {
           display: flex;
           width: 75%;
