--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -5,12 +5,11 @@
   text-transform: capitalize;
   z-index: 4;
 
-  .__container {
+  .__container_desk {
     display: flex;
     width: 100%;
     height: auto;
     background-color: transparent;
-    z-index: 4;
 
     .__list_header {
       display: flex;
@@ -21,19 +20,20 @@
       button {
         background: transparent;
         border: none;
-      }
+        outline: none;
 
-      li {
-        font-size: 35px;
-        text-decoration: none;
-        list-style-type: none;
-        color: #fff;
-        cursor: pointer;
-        padding: 33px;
-        background: transparent;
-        text-transform: capitalize;
-        &:hover {
-          color: #000;
+        li {
+          font-size: 35px;
+          text-decoration: none;
+          list-style-type: none;
+          color: #fff;
+          cursor: pointer;
+          padding: 33px;
+          background: transparent;
+          text-transform: capitalize;
+          &:hover {
+            color: #000;
+          }
         }
       }
     }
@@ -61,5 +61,122 @@
         }
       }
     }
+  }
+
+  .__container_mobile {
+    display: block;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    opacity: 1;
+
+    .__burger_btn {
+      border: none;
+      position: absolute;
+      background: none;
+      cursor: pointer;
+      display: flex;
+      top: 33px;
+      right: 19px;
+      width: auto;
+      z-index: 4;
+      img {
+        width: 55px;
+      }
+    }
+
+    .__menu_mobile {
+      flex-direction: column;
+      background-color: #fff;
+      display: flex;
+      border: none;
+      align-items: center;
+      justify-content: center;
+      position: fixed;
+      right: 0;
+      bottom: 0;
+      width: 100%;
+      height: 100vh;
+      padding: 2rem;
+      text-align: center;
+      right: 0;
+      z-index: 3;
+      border: 2px solid red;
+      text-decoration: none;
+      list-style-type: none;
+
+      button {
+        border: none;
+        outline: none;
+        background: none;
+        cursor: pointer;
+        appearance: none;
+        -webkit-appearance: none;
+        border: none;
+        text-transform: capitalize;
+        padding: 2rem;
+        font-size: 3rem;
+      }
+    }
+  }
+}
+///////////////////////// RESPONSIVE //////////////////////
+@media only screen and (min-width: 1200px) {
+  .__container_desk {
+    display: flex !important;
+    .__list_header {
+      display: flex;
+    }
+  }
+  .__container_mobile {
+    display: none !important;
+  }
+}
+
+@media only screen and (max-width: 960px) {
+  .__container_desk {
+    display: none;
+    .__list_header {
+      display: none !important;
+    }
+  }
+  .__container_mobile {
+    display: flex;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .__container_desk {
+    display: none;
+    .__list_header {
+      display: none;
+    }
+  }
+  .__container_mobile {
+    display: flex;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .__container_desk {
+    display: none;
+    .__list_header {
+      display: none;
+    }
+  }
+  .__container_mobile {
+    display: flex;
+  }
+}
+
+@media only screen and (max-width: 350px) {
+  .__container_desk {
+    display: none;
+    .__list_header {
+      display: none;
+    }
+  }
+  .__container_mobile {
+    display: flex;
   }
 }
