--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -4,6 +4,7 @@
   height: 100vh;
   flex-direction: column;
   color: rgb(21, 20, 20);
+  background-color: rgba(60, 57, 57, 0.75);
 
   .__container {
     display: block;
@@ -18,7 +19,7 @@
     width: 100%;
     display: flex;
     overflow: hidden;
-    min-height: 81vh;
+    height: 100vh;
     position: relative;
 
     .__box {
@@ -33,7 +34,6 @@
         flex-direction: column;
         margin-left: auto;
         padding: 2rem;
-        border: 3px solid yellow;
 
         .__txt {
           width: 55%;
