--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -5,22 +5,46 @@
   text-transform: capitalize;
   z-index: 4;
 
+  .__insta_link {
+    display: flex;
+    width: auto;
+    height: auto;
+    align-items: center;
+    width: 100%;
+    justify-content: flex-end;
+    margin-right: 2rem;
+
+    p {
+      font-size: 35px;
+      text-align: center;
+      justify-content: center;
+      font-family: "Poppins", sans-serif;
+      font-style: normal;
+      font-weight: bolder;
+      padding: 2rem;
+      color: #fff;
+      &:hover {
+        color: #000;
+      }
+    }
+  }
   .__container_desk {
     display: flex;
     width: 100%;
     height: auto;
     background-color: transparent;
 
-    .__list_header {
+    .__menu_desk {
       display: flex;
       width: 70%;
       height: auto;
       align-items: center;
 
-      button {
+      .__listItem_btn {
         background: transparent;
         border: none;
         outline: none;
+        border: 2px solid red;
 
         li {
           font-size: 35px;
@@ -37,56 +61,35 @@
         }
       }
     }
-
-    .__insta_link {
-      display: flex;
-      width: auto;
-      height: auto;
-      align-items: center;
-      width: 100%;
-      justify-content: flex-end;
-      margin-right: 2rem;
-
-      p {
-        font-size: 35px;
-        text-align: center;
-        justify-content: center;
-        font-family: "Poppins", sans-serif;
-        font-style: normal;
-        font-weight: bolder;
-        padding: 2rem;
-        color: #fff;
-        &:hover {
-          color: #000;
-        }
-      }
-    }
   }
 
   .__container_mobile {
-    display: block;
     width: 100%;
     height: 100%;
     cursor: pointer;
     opacity: 1;
+    display: flex;
+    border: 3px solid fuchsia;
 
     .__burger_btn {
       border: none;
-      position: absolute;
       background: none;
       cursor: pointer;
-      display: flex;
-      top: 33px;
-      right: 19px;
-      width: auto;
       z-index: 4;
+      border: 3px solid red;
+      display: block;
+      height: auto;
+      width: auto;
+
+      align-items: flex-end;
+      align-content: end;
+      margin-left: auto;
       img {
         width: 55px;
       }
     }
 
     .__menu_mobile {
-      flex-direction: column;
       background-color: #fff;
       display: flex;
       border: none;
@@ -101,21 +104,32 @@
       text-align: center;
       right: 0;
       z-index: 3;
-      border: 2px solid red;
+      border: 2px solid blue;
       text-decoration: none;
       list-style-type: none;
 
-      button {
+      .__listItem_mobile_btn {
+        display: flex;
+        padding: 1rem;
+        background: transparent;
         border: none;
-        outline: none;
-        background: none;
-        cursor: pointer;
-        appearance: none;
-        -webkit-appearance: none;
-        border: none;
-        text-transform: capitalize;
-        padding: 2rem;
-        font-size: 3rem;
+
+        li {
+          text-transform: capitalize;
+          color: #000;
+          font-size: 35px;
+          text-decoration: none;
+          list-style-type: none;
+          color: #fff;
+          cursor: pointer;
+          padding: 33px;
+          text-align: center;
+          text-transform: capitalize;
+          color: #000;
+          &:hover {
+            color: blue;
+          }
+        }
       }
     }
   }
