--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -8,8 +8,8 @@
 
   .__container {
     display: block;
-    border: 4px solid #000;
-    height: auto;
+    border: 2px solid #000;
+    height: 100%;
     width: 100%;
     flex-direction: column;
     position: absolute;
