--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -5,8 +5,9 @@ footer {
   width: 100%;
   flex-wrap: wrap;
   bottom: 0;
-  position: absolute;
   justify-content: space-between;
+  height: 7rem;
+  border: 4px solid blue;
 
   ul {
     display: flex;
@@ -14,26 +15,77 @@ footer {
     text-decoration: none;
     list-style-type: none;
     height: auto;
-    width: auto;
+    width: 70%;
+    border: 3px solid yellow;
 
     li {
-      padding: 8px;
+      padding: 1rem;
       font-size: small;
 
       .__logo {
         width: auto;
         max-height: 2rem;
       }
+
       a {
         color: #fff;
-        font-size: 12px;
+        font-size: medium;
+
         &:hover {
           color: #000;
         }
       }
     }
+
+    .__link_tako {
+      display: flex;
+      width: 100%;
+      height: auto;
+      border: 2px solid pink;
+
+      p {
+        font-size: medium;
+        padding: 0.5rem;
+        text-transform: uppercase;
+        font-style: normal;
+        font-family: "Poppins", sans-serif;
+      }
+    }
+
+    #__copyright {
+      display: block;
+
+      p {
+        font-size: medium;
+        color: #fff;
+        font-style: normal;
+      }
+    }
   }
-  .__keepintch {
+
+  #__contact {
+    display: block;
+    z-index: 4;
+    p {
+      font-size: 24px;
+      color: #fff;
+      font-style: normal;
+      cursor: pointer;
+      &:hover {
+        color: #000;
+        -moz-transform: scale(1.3);
+        -webkit-transform: scale(1.3);
+        -o-transform: scale(1.3);
+        -ms-transform: scale(1.3);
+        transform: scale(1.3);
+      }
+    }
+  }
+  button {
+    background-color: transparent;
+    border: none;
+  }
+  #__keepintch {
     display: flex;
     width: auto;
     height: auto;
@@ -47,10 +99,6 @@ footer {
     .__container {
       width: 100%;
       justify-content: start;
-    }
-    span {
-      width: 100%;
-      padding: 0.5rem;
     }
   }
 }
