--- a/src/components/Modal/styles.module.scss
+++ b/src/components/Modal/styles.module.scss
@@ -1,4 +1,7 @@
 .overlay {
+  display: flex;
+  width: 100%;
+  height: auto;
   background-color: rgba(0, 0, 0, 0.9);
   position: fixed;
   width: 100%;
@@ -7,6 +10,16 @@
   bottom: 0;
   left: 0;
   z-index: 5;
+
+  #__bg {
+    display: flex;
+    width: 100%;
+    height: auto;
+  }
+  img {
+    object-fit: cover;
+    opacity: 0.3;
+  }
 
   .__modalContainer {
     display: flex;
