--- a/src/components/AnimCircle/styles.module.scss
+++ b/src/components/AnimCircle/styles.module.scss
@@ -1,5 +1,4 @@
-$backgroundImage: "../../assets/images/boueeHoriz.webp";
-$backgroundFilter: rgb(27 26 27 / 75%);
+@import "../../style/scss-variables";
 
 .anim {
   display: flex;
