--- a/src/components/Formulaire/styles.module.scss
+++ b/src/components/Formulaire/styles.module.scss
@@ -8,10 +8,10 @@
 
   .__form_element {
     margin-top: 0.5rem;
+    font-size: 22px;
 
     label {
       display: block;
-
       font-size: 2rem;
     }
 
@@ -22,7 +22,7 @@
       width: 90%;
       margin-bottom: 1rem;
       font-size: 2rem;
-      padding: 0.7rem 0;
+      padding: 0.9rem 0;
       outline: none;
       background: transparent;
       color: #fff;
