--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -1,13 +1,11 @@
 footer {
   display: flex;
-  align-items: center;
   height: auto;
-  width: 100%;
+  width: auto;
   flex-wrap: wrap;
   bottom: 0;
   justify-content: space-between;
-  height: 7rem;
-  border: 4px solid blue;
+  align-items: center;
 
   ul {
     display: flex;
@@ -15,12 +13,18 @@ footer {
     text-decoration: none;
     list-style-type: none;
     height: auto;
-    width: 70%;
+    width: auto;
     border: 3px solid yellow;
 
+    p {
+      color: #fff;
+      text-transform: uppercase;
+      font-style: normal;
+      font-family: "Poppins", sans-serif;
+    }
+
     li {
-      padding: 1rem;
-      font-size: small;
+      padding: 0.3rem;
 
       .__logo {
         width: auto;
@@ -29,7 +33,9 @@ footer {
 
       a {
         color: #fff;
-        font-size: medium;
+        font-size: 0.8rem;
+        font-style: normal;
+        font-family: "Poppins", sans-serif;
 
         &:hover {
           color: #000;
@@ -37,59 +43,53 @@ footer {
       }
     }
 
-    .__link_tako {
-      display: flex;
-      width: 100%;
-      height: auto;
-      border: 2px solid pink;
-
-      p {
-        font-size: medium;
-        padding: 0.5rem;
-        text-transform: uppercase;
-        font-style: normal;
-        font-family: "Poppins", sans-serif;
-      }
-    }
-
     #__copyright {
       display: block;
-
-      p {
-        font-size: medium;
-        color: #fff;
-        font-style: normal;
-      }
     }
   }
 
-  #__contact {
-    display: block;
-    z-index: 4;
-    p {
-      font-size: 24px;
-      color: #fff;
-      font-style: normal;
-      cursor: pointer;
-      &:hover {
-        color: #000;
-        -moz-transform: scale(1.3);
-        -webkit-transform: scale(1.3);
-        -o-transform: scale(1.3);
-        -ms-transform: scale(1.3);
-        transform: scale(1.3);
-      }
-    }
-  }
-  button {
-    background-color: transparent;
-    border: none;
-  }
-  #__keepintch {
+  .__action_elements {
     display: flex;
+    align-items: center;
     width: auto;
     height: auto;
-    padding: 1rem;
+    flex-wrap: wrap;
+
+    button {
+      background: transparent;
+      color: #fff;
+      cursor: pointer;
+      border: none;
+    }
+
+    #__contact {
+      display: block;
+      z-index: 4;
+      height: auto;
+      justify-content: center;
+      height: auto;
+      padding: 1rem;
+      width: 20rem;
+      text-align: center;
+      &:hover {
+        color: #000;
+        -moz-transform: scale(1.1);
+        -webkit-transform: scale(1.1);
+        -o-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+        transform: scale(1.1);
+      }
+      p {
+        font-size: 1rem;
+        text-align: center;
+      }
+    }
+
+    #__keepintch {
+      display: flex;
+      width: auto;
+      height: auto;
+    }
   }
 }
 
