--- a/src/components/KeepInTouch/styles.module.scss
+++ b/src/components/KeepInTouch/styles.module.scss
@@ -1,78 +1,43 @@
-.form {
-  display: flex;
+.__container_form {
   width: 100%;
-  align-items: center;
   height: 100%;
-  justify-content: center;
+  position: relative;
+  display: flex;
 
-  .__container_form {
-    width: 100%;
-    height: 100%;
-    position: relative;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
+  .__form_element {
+    font-size: 14px;
+    margin: 5px auto;
     color: #fff;
-
-    .form-element {
-      margin-top: 0.5rem;
-      &::placeholder {
-        color: #fff;
-        font-size: 2rem;
-        text-align: left;
-        font-size: medium;
-        padding: 0.5rem;
-        text-transform: uppercase;
-        font-style: normal;
-        font-family: "Poppins", sans-serif;
-      }
-    }
 
     input {
       border: none;
       border-bottom: 0.1rem solid #e6e6e6;
-      width: 90%;
-      margin-bottom: 1rem;
+      margin-bottom: 2px;
       font-size: 1rem;
-      padding: 0.7rem 0;
       outline: none;
       background: transparent;
+      color: #fff;
+      width: auto;
+      cursor: pointer;
+      background-color: transparent;
       &::placeholder {
         color: #fff;
         font-size: 1rem;
+        font-style: normal;
+        font-family: "Poppins", sans-serif;
       }
     }
+  }
 
-    textarea {
-      border: none;
-      border-bottom: 0.1rem solid #e6e6e6;
-      width: 90%;
-      margin-bottom: 1rem;
-      font-size: 1rem;
-      resize: none;
-      outline: none;
-      color: red;
-
-      &::placeholder {
-        color: #fff;
-        font-size: 2rem;
-        text-align: left;
-      }
-    }
-
-    button {
-      height: 3.2rem;
-      width: 6rem;
-      font-size: 1rem;
-      border-radius: 1rem;
-      background: transparent;
-      color: #fff;
-      margin-top: 1.2rem;
-      cursor: pointer;
-      border: 2px solid #e6e6e6;
-      &:hover {
-        color: #000;
-      }
-    }
+  button {
+    height: 3.2rem;
+    width: auto;
+    background: transparent;
+    font-size: 1rem;
+    background: transparent;
+    color: #fff;
+    margin-top: 1.2rem;
+    cursor: pointer;
+    border: none;
   }
 }
