--- a/src/index.scss
+++ b/src/index.scss
@@ -13,7 +13,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-weight: 400;
-  color: #000;
+  width: 100%;
+  position: relative;
 }
 
 a {
