--- a/src/components/KeepInTouch/styles.module.scss
+++ b/src/components/KeepInTouch/styles.module.scss
@@ -3,17 +3,17 @@
   height: 100%;
   position: relative;
   display: flex;
+  font-size: 14px;
 
   .__form_element {
-    font-size: 14px;
-    margin: 5px auto;
+    margin: 7px auto;
     color: #fff;
 
     input {
       border: none;
       border-bottom: 0.1rem solid #e6e6e6;
       margin-bottom: 2px;
-      font-size: 1rem;
+      font-size: 20px;
       outline: none;
       background: transparent;
       color: #fff;
@@ -21,8 +21,8 @@
       cursor: pointer;
       background-color: transparent;
       &::placeholder {
-        color: #fff;
-        font-size: 1rem;
+        color: silver;
+        font-size: 18px;
         font-style: normal;
         font-family: "Poppins", sans-serif;
       }
@@ -33,11 +33,19 @@
     height: 3.2rem;
     width: auto;
     background: transparent;
-    font-size: 1rem;
-    background: transparent;
     color: #fff;
-    margin-top: 1.2rem;
     cursor: pointer;
     border: none;
+    border: 2px solid fuchsia;
+    img {
+      width: 35px;
+      height: auto;
+      object-fit: contain;
+      padding-top: 2px;
+    }
+    &:hover {
+      color: #dcdcdc;
+      transform: scale(1.2);
+    }
   }
 }
