--- a/src/style/scss-variables.scss
+++ b/src/style/scss-variables.scss
@@ -1,3 +1,4 @@
 $bg_img: url("../../assets/images/boueeHoriz.webp");
 $backgroundImage: "../../assets/images/boueeHoriz.webp";
 $backgroundFilter: rgb(27 26 27 / 75%);
+$backgroundColor: rgba(60, 57, 57, 0.75);
