--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -1,14 +1,14 @@
+@import "../../style/scss-variables";
+
 .home {
   display: flex;
   width: 100%;
   height: 100vh;
   flex-direction: column;
   color: rgb(21, 20, 20);
-  background-color: rgba(60, 57, 57, 0.75);
 
   .__container {
     display: block;
-    border: 2px solid #000;
     height: 100%;
     width: 100%;
     flex-direction: column;
@@ -20,13 +20,11 @@
     display: flex;
     overflow: hidden;
     height: 100vh;
-    position: relative;
 
     .__box {
       display: flex;
       width: 100%;
       height: auto;
-      position: relative;
 
       .__box_content {
         width: 100%;
@@ -72,9 +70,9 @@
           border-radius: 39px;
           flex-direction: column;
           padding: 2rem;
-          margin-left: auto;
           z-index: 3;
           line-height: 1.5;
+          margin-left: auto;
 
           #__title {
             p {
@@ -110,5 +108,59 @@
     height: auto;
     display: block;
     z-index: 2;
+    padding: 0.5rem;
+  }
+}
+///////////////////////// RESPONSIVE //////////////////////
+@media only screen and (max-width: 820px) {
+  .home {
+    .__container {
+      display: block;
+      height: 100%;
+      width: 100%;
+      flex-direction: column;
+      position: absolute;
+    }
+
+    .__section {
+      .__box {
+        .__box_content {
+          padding: 3rem;
+          .__txt {
+            width: 100%;
+            p {
+              font-size: 16px;
+              padding: 2rem;
+            }
+          }
+
+          .__gif {
+            justify-content: flex-start;
+            img {
+              width: 13rem;
+              height: auto;
+              border-radius: 34px;
+            }
+          }
+
+          .__form_contact {
+            width: 12rem;
+            padding: 1rem;
+            margin: 0;
+
+            #__title {
+              p {
+                font-size: 16px;
+              }
+            }
+            #__txt {
+              p {
+                font-size: 14px;
+              }
+            }
+          }
+        }
+      }
+    }
   }
 }
