--- a/src/components/AnimCircle/styles.module.scss
+++ b/src/components/AnimCircle/styles.module.scss
@@ -16,7 +16,7 @@
     canvas {
       background-color: $backgroundFilter;
       background-size: cover;
-      width: auto;
+      width: 100%;
       height: 100%;
       z-index: -1;
       display: block;
