responsive in progress

--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -22,7 +22,7 @@ footer {
       font-family: "Poppins", sans-serif;
       font-size: 16px;
       &:hover {
-        color: silver;
+        color: #000;
       }
     }
 
@@ -35,12 +35,12 @@ footer {
       }
 
       a {
-        color: #fff;
+        color: silver;
         font-size: 0.8rem;
         font-style: normal;
         font-family: "Poppins", sans-serif;
         &:hover {
-          color: silver;
+          color: #000;
         }
       }
     }
@@ -69,18 +69,21 @@ footer {
       z-index: 4;
       justify-content: center;
       height: auto;
-      padding: 1rem;
+      padding: 0.5rem;
       width: auto;
       text-align: center;
+      border: 2px solid blue;
+      width: 40%;
+      height: auto;
 
       p {
         color: silver;
-        font-size: 24px;
+        font-size: 18px;
         text-align: center;
         font-family: "Poppins", sans-serif;
         font-style: normal;
         &:hover {
-          color: #fff;
+          color: #000;
           -moz-transform: scale(1.1);
           -webkit-transform: scale(1.1);
           -o-transform: scale(1.1);
@@ -94,6 +97,8 @@ footer {
       display: flex;
       width: 60%;
       height: auto;
+      border: 2px solid red;
+      padding: 0.5rem;
     }
   }
 }
