--- a/src/components/KeepInTouch/styles.module.scss
+++ b/src/components/KeepInTouch/styles.module.scss
@@ -21,8 +21,7 @@
       cursor: pointer;
       background-color: transparent;
       &::placeholder {
-        color: silver;
-        font-size: 18px;
+        color: red;
         font-style: normal;
         font-family: "Poppins", sans-serif;
       }
@@ -46,6 +45,29 @@
     &:hover {
       color: #dcdcdc;
       transform: scale(1.2);
+    }
+  }
+}
+
+///////////////////////// RESPONSIVE //////////////////////
+@media only screen and (max-width: 780px) {
+  .__container_form {
+    font-size: 11px;
+    .__form_element {
+      input {
+        font-size: 14px;
+        &::placeholder {
+          font-size: 12px;
+        }
+      }
+    }
+    button {
+      height: 1rem;
+      img {
+        width: 26px;
+        padding-top: 4px;
+        border: 2px solid blueviolet;
+      }
     }
   }
 }
