--- a/src/components/HeaderTxt/styles.module.scss
+++ b/src/components/HeaderTxt/styles.module.scss
@@ -1,12 +1,28 @@
 .txts {
   display: flex;
-  width: 100%;
+  width: 39%;
   height: 100%;
-  border: 3px solid red;
+  padding: 3rem;
   li {
     p {
       color: #fff;
       font-size: 24px;
+      line-height: 1.3;
+    }
+  }
+}
+
+//////////////////////// RESPONSIVE ///////////////////////////////
+@media only screen and (max-width: 768px) {
+  .txts {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    li {
+      p {
+        color: #fff;
+        font-size: 16px;
+      }
     }
   }
 }
