--- a/src/components/Modal/styles.module.scss
+++ b/src/components/Modal/styles.module.scss
@@ -43,7 +43,7 @@
         height: auto;
         cursor: pointer;
         p {
-          font-size: 36px;
+          font-size: 1.5rem;
           font-style: normal;
           color: #fff;
           text-transform: capitalize;
@@ -55,9 +55,9 @@
 
       .__content {
         display: flex;
-        padding: 3rem;
         width: 100%;
         height: 100%;
+        justify-content: flex-end;
 
         .__content_form {
           display: flex;
@@ -68,6 +68,22 @@
           display: flex;
         }
       }
+    }
+  }
+}
+
+//////////////////////// RESPONSIVE ///////////////////////////////
+@media only screen and (max-width: 768px) {
+  .overlay {
+    .__modalContainer {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: absolute;
+      top: 81px;
+      left: 0;
+      width: 100%;
+      height: 100%;
     }
   }
 }
