--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -15,6 +15,7 @@ footer {
     height: auto;
     width: auto;
     height: 1rem;
+
     p {
       color: #fff;
       text-transform: uppercase;
@@ -30,13 +31,20 @@ footer {
       padding: 0.3rem;
 
       .__logo {
-        width: auto;
-        max-height: 2rem;
+        display: flex;
+        width: 12rem;
+        object-fit: contain;
+        height: 2rem;
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
       }
 
       a {
         color: silver;
-        font-size: 0.8rem;
+        font-size: 1rem;
         font-style: normal;
         font-family: "Poppins", sans-serif;
         &:hover {
@@ -56,6 +64,7 @@ footer {
     width: 30%;
     height: auto;
     flex-wrap: wrap;
+    margin-left: auto;
 
     button {
       background: transparent;
@@ -72,7 +81,6 @@ footer {
       padding: 0.5rem;
       width: auto;
       text-align: center;
-      border: 2px solid blue;
       width: 40%;
       height: auto;
 
@@ -97,14 +105,13 @@ footer {
       display: flex;
       width: 60%;
       height: auto;
-      border: 2px solid red;
       padding: 0.5rem;
     }
   }
 }
 
 //////////////////////// RESPONSIVE ///////////////////////////////
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1024px) {
   footer {
     ul {
       p {
@@ -114,24 +121,22 @@ footer {
         font-family: "Poppins", sans-serif;
         font-size: 8px;
       }
-
       li {
         padding: 0.3rem;
         width: auto;
         text-align: center;
-
         .__logo {
-          width: auto;
-          max-height: 2rem;
+          display: flex;
+          width: 7rem;
+          object-fit: contain;
+          height: 2rem;
         }
-
         a {
           color: #fff;
           font-size: 10px;
           font-style: normal;
           font-family: "Poppins", sans-serif;
           display: flex;
-
           &:hover {
             color: #000;
           }
