--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -6,6 +6,21 @@
   height: auto;
   text-transform: capitalize;
   z-index: 4;
+  padding: 0.5rem;
+  align-items: center;
+
+  .__logo {
+    display: flex;
+    width: 23rem;
+    object-fit: contain;
+    height: 5rem;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      z-index: 7;
+    }
+  }
 
   .__container_desk {
     display: flex;
@@ -18,6 +33,7 @@
       width: 70%;
       height: auto;
       align-items: center;
+      z-index: 7;
 
       .__listItem_btn {
         background: transparent;
@@ -61,7 +77,6 @@
       margin-left: auto;
       img {
         width: 46px;
-        padding: 5px;
       }
     }
 
@@ -75,11 +90,6 @@
       bottom: 0;
       width: 100%;
       height: 100%;
-      padding: 2rem;
-      text-align: center;
-      z-index: 3;
-      text-decoration: none;
-      list-style-type: none;
       background-color: rgba(0, 0, 0, 0.9);
 
       .__listItem_mobile_btn {
@@ -87,6 +97,9 @@
         padding: 1rem;
         background: transparent;
         border: none;
+        width: 100%;
+        height: auto;
+        justify-content: center;
 
         li {
           text-transform: capitalize;
@@ -104,6 +117,7 @@
       }
     }
   }
+
   .__insta_link {
     display: flex;
     width: auto;
@@ -144,17 +158,25 @@
 }
 
 @media only screen and (max-width: 990px) {
-  .__container_desk {
-    display: none !important;
-    .__list_header {
+  .header {
+    .__logo {
+      display: flex;
+      width: 3rem;
+      object-fit: contain;
+      height: auto;
+    }
+
+    .__container_desk {
       display: none !important;
+      .__list_header {
+        display: none !important;
+      }
+    }
+    .__container_mobile {
+      display: flex;
     }
   }
-  .__container_mobile {
-    display: flex;
-  }
 }
-
 @media only screen and (max-width: 820px) {
   .__container_desk {
     display: none;
