--- a/src/components/HeaderTxt/styles.module.scss
+++ b/src/components/HeaderTxt/styles.module.scss
@@ -3,11 +3,23 @@
   width: 39%;
   height: 100%;
   padding: 3rem;
-  li {
-    p {
-      color: #fff;
-      font-size: 24px;
-      line-height: 1.3;
+
+  ul {
+    list-style-type: none;
+
+    li {
+      h1 {
+        font-size: 7rem;
+        padding: 2rem;
+        text-align: center;
+        color: #999797;
+      }
+
+      p {
+        color: #fff;
+        font-size: 18px;
+        line-height: 1.3;
+      }
     }
   }
 }
@@ -18,10 +30,21 @@
     display: flex;
     width: 100%;
     height: 100%;
-    li {
-      p {
-        color: #fff;
-        font-size: 16px;
+    padding: 1rem;
+    ul {
+      list-style-type: none;
+      li {
+        h1 {
+          font-size: 2rem;
+          padding: 0.5rem;
+          text-align: left;
+        }
+
+        p {
+          color: #fff;
+          font-size: 18px;
+          line-height: 1.3;
+        }
       }
     }
   }
