--- a/src/components/KeepInTouch/styles.module.scss
+++ b/src/components/KeepInTouch/styles.module.scss
@@ -3,7 +3,6 @@
   height: 100%;
   position: relative;
   display: flex;
-  font-size: 14px;
 
   .__form_element {
     margin: 7px 4px;
@@ -15,13 +14,13 @@
       margin-bottom: 2px;
       font-size: 20px;
       outline: none;
-      background: transparent;
       color: #fff;
       width: auto;
       cursor: pointer;
       background-color: transparent;
       &::placeholder {
-        color: red;
+        font-size: 1rem;
+        color: silver;
         font-style: normal;
         font-family: "Poppins", sans-serif;
       }
@@ -35,7 +34,6 @@
     color: #fff;
     cursor: pointer;
     border: none;
-    border: 2px solid fuchsia;
     img {
       width: 35px;
       height: auto;
@@ -66,7 +64,6 @@
       img {
         width: 26px;
         padding-top: 4px;
-        border: 2px solid blueviolet;
       }
     }
   }
